[java-inspections] part of IDEA-380832
- change the view of paths

(cherry picked from commit 9cad65ceab113d4d039d11e214c5b638c3b5ea90)

IJ-CR-185099

GitOrigin-RevId: 8d05612b297682912c62b73e7c8e09a8886184c1